feat(histoire): add Histoire integration for component documentation
- Add histoire-site workspace with Histoire configuration
- Configure theme switching between BorgerDK and VirkDK themes
- Add initial Button component story as example
- Update workspace configuration to include histoire-site
- Add story:dev, story:build, and story:preview scripts to root package
- Copy DKFDS CSS files to public directory for theme support

--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "docs:dev": "pnpm -C docs-site run dev",
     "docs:build": "pnpm -C docs-site run build",
     "docs:preview": "pnpm -C docs-site run preview",
+    "story:dev": "pnpm -C histoire-site run dev",
+    "story:build": "pnpm -C histoire-site run build",
+    "story:preview": "pnpm -C histoire-site run preview",
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
