refactor: optimize Histoire theme loading with Vite asset URLs
- Replace file copying approach with Vite's ?url asset imports
- Add themeAssets utility for dynamic CSS loading at runtime
- Remove copy-themes script from package.json build process
- Improve theme switching performance with caching
- Ensure styles only load in story frames, not in main Histoire app
- Simplify histoire.config.ts by removing redundant tree groups
- Update all story files for consistency and proper formatting

This change improves build performance and development experience by
eliminating the need to copy theme files and using Vite's built-in
asset handling for dynamic theme loading.

--- a/documentation/package.json
+++ b/documentation/package.json
@@ -4,12 +4,11 @@
   "description": "Histoire documentation site for DKFDS Vue 3 component library",
   "type": "module",
   "scripts": {
-    "copy-themes": "rm -rf public/css public/fonts public/img && mkdir -p public/css public/fonts public/img && cp ../node_modules/dkfds/dist/css/dkfds*.css public/css/ && cp -R ../node_modules/dkfds/dist/fonts/. public/fonts/ && cp -R ../node_modules/dkfds/dist/img/. public/img/",
-    "story:dev": "npm run copy-themes && histoire dev",
-    "story:build": "npm run copy-themes && histoire build",
+    "story:dev": "histoire dev",
+    "story:build": "histoire build",
     "story:preview": "histoire preview",
-    "dev": "npm run copy-themes && histoire dev",
-    "build": "npm run copy-themes && histoire build",
+    "dev": "histoire dev",
+    "build": "histoire build",
     "preview": "histoire preview"
   },
   "dependencies": {
