--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@madsb/dkfds-vue-kit",
   "version": "0.0.1-alpha.1",
-  "description": "Vue 3 implementation of Det Fælles Designsystem (DKFDS) v11 - Danish Common Design System",
+  "description": "Vue 3 implementation of Det F\u00e6lles Designsystem (DKFDS) v11 - Danish Common Design System",
   "author": "Mads Bjerre",
   "license": "MIT",
   "type": "module",
@@ -22,22 +22,10 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs"
     },
-    "./components/*": {
-      "types": "./dist/components/*.d.ts",
-      "import": "./dist/components/*.js"
-    },
-    "./composables": {
-      "types": "./dist/composables/index.d.ts",
-      "import": "./dist/index.mjs"
-    },
-    "./utils": {
-      "types": "./dist/utils/index.d.ts",
-      "import": "./dist/index.mjs"
-    },
     "./dist/dkfds-vue-kit.css": "./dist/dkfds-vue-kit.css",
+    "./styles": "./src/styles/index.scss",
     "./scss": "./src/assets/_index.scss",
     "./scss/*": "./src/assets/_*.scss",
-    "./styles": "./src/styles/index.scss",
     "./package.json": "./package.json"
   },
   "scripts": {
